tidying up for web, add the platform name on the options menu